# set-game-v4

./: main.py  pyproject.toml
app/: api.py  serialize.py  setgame.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Board.jsx  Board.module.css  Card.jsx  Card.module.css  PlayerNameForm.jsx  Players.jsx  Players.module.css  WaitingToStart.jsx
tests/: conftest.py  test_api.py  test_setgame.py
