[tool.poetry]
name = "set-game"
version = "0.1.0"
description = "set game"
authors = ["Jay Harris <jaywritescode@users.noreply.github.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
assertpy = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
